# bid

./: Cargo.toml
.github/workflows/: build.yml
src/: main.rs
