[package]
name = "bid"
version = "0.1.0"
authors = ["Noah Masur <noahmasur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
chrono = "0.4.19"
clap = "2.33.3"
regex = "1.4.2"
textplots = "0.5.3"
tokio = { version = "0.3.3", features = ["full"] }
yahoo_finance_api = "1.0.2"
